Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
6.5.0, 6.0.3, 6.0.4, 6.5.1, 6.6.0
-
Triaged
-
1
-
Yes
Description
Problem
As described in CBSE-8828, for a replica DCP stream. If a previous item that uses XATTRs is to be deleted, however it is not resident - then we must perform a bgfetch - see MB-36087. When the bgfetch is complete we replay PassiveStream::messageReceived. However this time it fails because the last seqno now equals the sequence number of the deletion and so it is discarded.
Suggested Possible Solution
- only set the last seqno to the seqno of the message just received, once the message has been completed or
- If an EWOULD_BLOCK occurs reserve the setting of the last seqno so the message can be received again.
Attachments
Issue Links
1.
|
[BP] MB-41255 to 6.0.4 - MP2 |
![]() |
Resolved | Daniel Owen |
Build couchbase-server-6.6.2-9411 contains kv_engine commit 5958386 with commit message:
[BP]
MB-41255: Don't bgfetch for a replica delete of an xattr