engines/ep/src/vbucket.cc
@@ -1480,7 +1480,8 @@ ENGINE_ERROR_CODE VBucket::deleteWithMeta(
         } else {
             delrv = MutationStatus::NotFound;
         }
-    } else if (mcbp::datatype::is_xattr(v->getDatatype()) && !v->isResident()) {
+    } else if (!isReplication &&
+               mcbp::datatype::is_xattr(v->getDatatype()) && !v->isResident()) {
         // MB-25671: A temp deleted xattr with no value must be fetched before
         // the deleteWithMeta can be applied.
         delrv = MutationStatus::NeedBgFetch;
